@@ -1,8 +1,6 @@
 package flyweight;
 
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.ExpectedException;
+import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
 import java.util.Collections;
@@ -10,43 +8,38 @@ import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
-import static org.hamcrest.CoreMatchers.equalTo;
-import static org.junit.Assert.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
-public class CalculatorTest {
-
-    @Rule
-    public ExpectedException expectedException = ExpectedException.none();
+class CalculatorTest {
 
     @Test
-    public void testComputeIfEmpty() {
+    void testComputeIfEmpty() {
         Calculator calculator = new Calculator();
-        assertThat(calculator.calculateDistances(Collections.emptyList(), 200), equalTo(0));
-        assertThat(calculator.calculateDistances(Arrays.asList(Rectangle.getInstance(100, 20)), 200),
-                equalTo(0));
+        assertEquals(0, calculator.calculateDistances(Collections.emptyList(), 200));
+        assertEquals(0, calculator.calculateDistances(List.of(Rectangle.getInstance(100, 20)), 200));
     }
 
     @Test
-    public void testComputeIfNotFit() {
-        expectedException.expect(IllegalArgumentException.class);
-        expectedException.expectMessage("Not fit");
-
-        new Calculator().calculateDistances(Arrays.asList(Rectangle.getInstance(100, 100),
-                Rectangle.getInstance(100, 20)), 50);
+    void testComputeIfNotFit() {
+        IllegalArgumentException e = assertThrows(IllegalArgumentException.class,
+                () -> new Calculator().calculateDistances(List.of(Rectangle.getInstance(100, 100),
+                Rectangle.getInstance(100, 20)), 50));
+        assertEquals("Not fit", e.getMessage());
     }
 
     @Test
-    public void testCompute() {
-        assertThat(new Calculator().calculateDistances(Arrays.asList(Rectangle.getInstance(100, 100),
-                Rectangle.getInstance(100, 20)), 220), equalTo(20));
+    void testCompute() {
+        assertEquals(20, new Calculator().calculateDistances(List.of(Rectangle.getInstance(100, 100),
+                Rectangle.getInstance(100, 20)), 220));
     }
 
     @Test
-    public void testComputeMore() {
+    void testComputeMore() {
         List<Rectangle> rectangles = IntStream
                 .range(0, 100)
                 .mapToObj(i -> Rectangle.getInstance(10, 5))
                 .collect(Collectors.toList());
-        assertThat(new Calculator().calculateDistances(rectangles, 1200), equalTo(2));
+        assertEquals(2, new Calculator().calculateDistances(rectangles, 1200));
     }
 }
