@@ -1,18 +1,17 @@
 package interpreter;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
 import java.util.List;
 
-import static org.hamcrest.CoreMatchers.equalTo;
-import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class CitySelectorTest {
 
     @Test
     public void selectNames() {
-        List<City> cities = Arrays.asList(
+        List<City> cities = List.of(
                 new City("Budapest", "", 1_752_704),
                 new City("Debrecen", "Hajdú-Bihar", 201_981),
                 new City("Szeged", "Csongrád", 161_137),
@@ -21,6 +20,6 @@ public class CitySelectorTest {
         );
 
         List<String> names = new CitySelector(cities).selectNames("#this.?[population gt 200000].![name]");
-        assertThat(names, equalTo(Arrays.asList("Budapest", "Debrecen")));
+        assertEquals(List.of("Budapest", "Debrecen"), names);
     }
 }
